tests/ui/feature-gates/feature-gate-sha512_sm_x86.rs
//@ only-x86_64
#[target_feature(enable = "sha512")]
//~^ ERROR: currently unstable
unsafe fn foo() {}

fn main() {}
